# binairo

./: Cargo.toml  README.md
data/: 4x4.cfg  5x5_2solutions.cfg  6x6.cfg  6x6_error.cfg  6x6_short.cfg
examples/: 10x10.cfg  14x14.cfg  6x6_pretty.cfg
src/: board.rs  init.rs  main.rs  pretty_print.rs
