[package]
name = "binairo"
version = "0.1.1"
edition = "2021"
description = "A binairo solver."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Marty3000/binairo.git"
documentation = "https://docs.rs/binairo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
